# DicoRago

./: README.md  docker-compose.yml
anki/: __init__.py  manifest.json
anki/dicorago-anki/: README.md  index.html  package-lock.json  package.json  vite.config.ts
anki/dicorago-anki/src/: App.vue  main.ts
anki/dicorago-anki/src/views/: LoginView.vue
backend/: .env  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: analyse.py  config.py  database.py  main.py  models.py  repository.py  routes.py  schemas.py
backend/app/databases/: dict_db.py  main_db.py
backend/app/models/: __init__.py  dictionary.py  user.py
backend/app/routes/: analysis.py  auth.py  user.py
frontend/: Dockerfile  README.md  default.conf  index.html  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/: api.ts  main.ts  schemas.ts  types.ts
frontend/src/assets/: editor-box.css  editor-underline.css  editor-zen.css  editor.css
frontend/src/components/: AnkiLogin.vue  DictionaryEntry.vue  DictionaryExportImport.vue  DictionaryList.vue  DictionaryTable.vue  ExampleDetails.vue  NavigationBar.vue  SenseDetails.vue  SenseList.vue  TextEditor.vue  TextEditorControls.vue  TextEditorSettings.vue  TextEditorText.vue  ToggleSwitch.vue  UnitDetails.vue  VocabularyEntry.vue  VocabularyList.vue  VocabularyTable.vue
frontend/src/components/home/: DemoAnalyzedText.vue  DemoUnitDetails.vue  FeatureEntry.vue  HeroSection.vue  HomeFeatures.vue  HomeFooter.vue  HomeHeader.vue
frontend/src/data/: changelog.ts  sample.ts  tag.ts
frontend/src/router/: index.ts
frontend/src/stores/: dictionary.ts  settings.ts  user.ts  vocabulary.ts
frontend/src/views/: AnalyzeView.vue  AnkiLogin.vue  AnkiLoginView.vue  AnkiView.vue  ChangelogView.vue  DictionaryView.vue  HomeView.vue  NotFoundView.vue  VocabularyView.vue
